css_tabs.css
ul.tab-list {
    display: table-row;
}

[id^=tab] {
    list-style-type: none;
    position: absolute;
    width: 100%;
    
    height: 150px;
    min-height: 150px;
    overflow:hidden;
}
[id^=tab]:first-child {
    z-index: 1;
}
[id^=tab]:target {
    z-index: 2;
}

#tab1, a[href="#tab1"] {
    background-color: aqua;
}
#tab2, a[href="#tab2"] {
    background-color: lawngreen;
}
#tab3, a[href="#tab3"] {
    background-color: mediumvioletred;
}

div.tabular-data {
    position: relative;
    width: 50%;
    margin-left: auto ;
    margin-right: auto ;
}

section{
    background-color: blue;
}

nav.tab-widget {
    display: table;
    width: 100%;
}

nav.tab-widget a[href^="#"] {
    display: table-cell;
    text-align: center;
}

